--- a/styles/galerry.css
+++ b/styles/galerry.css
@@ -1,17 +1,15 @@
 html{
-    width: 100%
+    width: 100%;
+    
 }
 body{
     width: 100%;
     margin: 0;
-    /* background-image: url(/images/galerry/beauty-fashion-portrait-young-blond-woman-model-with-natural-makeup-perfect-skin-with-bright-flowers-posing.jpg);
-    background-size: cover;
-    background-repeat: no-repeat; */
-}
+    
+} 
 .img{
      position: absolute;
      margin-bottom: 50px;
-     position: absolute;
     width: 100%;
     height:  100%; 
 }
@@ -19,7 +17,6 @@ body{
     position: absolute;
     margin-left: 15%;
     margin-top: 10px;
-    
     width: max-content;
     font-size: 80px;
     font-family:'Courier New', Courier, monospace ;
