--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,6 @@
+html{
+width: 100%;
+}
 
 body{
     width: 100%;
@@ -5,7 +8,7 @@ body{
     margin: 0%;
     background-image: url(/images/homepage/homePageImage.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+  
 }
 
 .backgroundImage{
