--- a/styles/form2.css
+++ b/styles/form2.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background-image: url(/images/form2/hair-equipment-paper-bag.jpg);
+    background-image: url(../images/form2/hair-equipment-paper-bag.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
