--- a/styles/aboutMe.css
+++ b/styles/aboutMe.css
@@ -4,42 +4,42 @@ html{
 body{
     height: 100%;
     margin: 0px;
-    background: url(/images/About_me/images.jpg);
+    background: url(../images/About_me/images.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-  
+
 }
 .titleAbout{
     position: absolute;
     display: inline-block;
     margin-top: 10px;
-    margin-left: 45%; 
-     width: max-content; 
+    margin-left: 45%;
+     width: max-content;
     font-family: 'Courier New', Courier, monospace;
     font-size: 50px;
     color: black;
 }
-     
+
 .button {
     position: absolute;
     margin-top:  10px;
     margin-left: 75px;
     display: inline-block;
     width: 50px;
-    
+
 }
 .homeButton{
     cursor: pointer;
     position:sticky;
     width: 50px;
-  
+
 }
 
 .tmp1 {
    margin-left:30px;
    width: min-content;
    height:min-content
-   
+
 }
 
 .picOfme {
@@ -49,8 +49,8 @@ body{
     margin-top: 30%;
     padding-top: 0px;
     border: 8px solid gray;
-    
-    
+
+
 }
  .tmp1{
     display: inline-block;
@@ -63,8 +63,8 @@ body{
     margin-left: 10%;
     vertical-align: middle;
     width: 30%;
-   
-  
+
+
 }
 .text {
  font-family:cursive;
