--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@ body{
     width: 100%;
     height: 100%;
     margin: 0%;
-    background-image: url(/hairbyelizapetrova/images/homepage/homePageImage.jpg);
+    background-image: url(../images/homepage/homePageImage.jpg);
     background-size: cover;
 
 }
