--- a/styles/prices.css
+++ b/styles/prices.css
@@ -3,10 +3,10 @@ body{
     margin: 0px;
     width: 100;
     height:80%;
-    background-image: url(/images/prices/scissors-hair-trimmer-copy-space.jpg);
+    background-image: url(../images/prices/scissors-hair-trimmer-copy-space.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    
+
 }
 
 .prices{
@@ -18,7 +18,7 @@ body{
     color: #FFF;
     font-size:50px ;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-    
+
 }
 .prices1{
   position:absolute;
@@ -33,11 +33,11 @@ body{
     margin-left: 75px;
     margin-top: 10px;
     width: 50px;
-    
+
 }
 .homeButton{
     cursor: pointer;
     position:fixed;
     width: 50px;
-  
+
 }
